Fix compile errors with Visual Studio 2005 Express. This time for release builds.

--- a/DScaler/Plugins/DI_Adaptive/DI_Adaptive2005.vcproj
+++ b/DScaler/Plugins/DI_Adaptive/DI_Adaptive2005.vcproj
@@ -76,6 +76,7 @@
 			<Tool
 				Name="VCLinkerTool"
 				IgnoreImportLibrary="true"
+				AdditionalDependencies="user32.lib"
 				OutputFile="..\..\Release/DI_Adaptive.dll"
 				LinkIncremental="1"
 				SuppressStartupBanner="true"
