--- a/DScaler/Plugins/FLT_Gamma/FLT_Gamma2005.vcproj
+++ b/DScaler/Plugins/FLT_Gamma/FLT_Gamma2005.vcproj
@@ -75,6 +75,7 @@
 			<Tool
 				Name="VCLinkerTool"
 				IgnoreImportLibrary="true"
+				AdditionalDependencies="user32.lib"
 				OutputFile="..\..\Release/FLT_Gamma.dll"
 				LinkIncremental="1"
 				SuppressStartupBanner="true"
