--- a/DScaler/SendMsg/SendMsg2005.vcproj
+++ b/DScaler/SendMsg/SendMsg2005.vcproj
@@ -167,6 +167,7 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
+				AdditionalDependencies="user32.lib"
 				OutputFile="..\Release/SendMsg.exe"
 				LinkIncremental="1"
 				SuppressStartupBanner="true"
