--- a/DScaler/Plugins/FLT_BlackWhite/FLT_BlackWhite2005.vcproj
+++ b/DScaler/Plugins/FLT_BlackWhite/FLT_BlackWhite2005.vcproj
@@ -201,6 +201,7 @@
 		</Configuration>
 		<Configuration
 			Name="Debug Express|Win32"
+			IntermediateDirectory="$(ConfigurationName)"
 			ConfigurationType="1"
 			>
 			<Tool
