--- a/DScaler/Plugins/FLT_Gamma/FLT_Gamma2005.vcproj
+++ b/DScaler/Plugins/FLT_Gamma/FLT_Gamma2005.vcproj
@@ -206,6 +206,7 @@
 		</Configuration>
 		<Configuration
 			Name="Debug Express|Win32"
+			IntermediateDirectory="$(ConfigurationName)"
 			ConfigurationType="1"
 			>
 			<Tool
