--- a/DScaler/RegSpy/RegSpy2005.vcproj
+++ b/DScaler/RegSpy/RegSpy2005.vcproj
@@ -208,6 +208,7 @@
 		</Configuration>
 		<Configuration
 			Name="Debug Express|Win32"
+			IntermediateDirectory="$(ConfigurationName)"
 			ConfigurationType="1"
 			>
 			<Tool
