--- a/DScaler/DScalerRes/DScalerRes2005.vcproj
+++ b/DScaler/DScalerRes/DScalerRes2005.vcproj
@@ -200,6 +200,7 @@
 		</Configuration>
 		<Configuration
 			Name="Debug Express|Win32"
+			IntermediateDirectory="$(ConfigurationName)"
 			ConfigurationType="1"
 			>
 			<Tool
