--- a/DScaler/FreqExtract/FreqExtract2005.vcproj
+++ b/DScaler/FreqExtract/FreqExtract2005.vcproj
@@ -193,6 +193,7 @@
 		</Configuration>
 		<Configuration
 			Name="Debug Express|Win32"
+			IntermediateDirectory="$(ConfigurationName)"
 			ConfigurationType="1"
 			>
 			<Tool
