--- a/DScaler/PlugTest/PlugTest2005.vcproj
+++ b/DScaler/PlugTest/PlugTest2005.vcproj
@@ -198,6 +198,7 @@
 		</Configuration>
 		<Configuration
 			Name="Debug Express|Win32"
+			IntermediateDirectory="$(ConfigurationName)"
 			ConfigurationType="1"
 			>
 			<Tool
