--- a/DScaler/Plugins/DI_MoComp2/DI_MoComp22005.vcproj
+++ b/DScaler/Plugins/DI_MoComp2/DI_MoComp22005.vcproj
@@ -204,6 +204,7 @@
 		</Configuration>
 		<Configuration
 			Name="Debug Express|Win32"
+			IntermediateDirectory="$(ConfigurationName)"
 			ConfigurationType="1"
 			>
 			<Tool
