--- a/DScaler/Plugins/DI_TwoFrame/DI_TwoFrame2005.vcproj
+++ b/DScaler/Plugins/DI_TwoFrame/DI_TwoFrame2005.vcproj
@@ -199,6 +199,7 @@
 		</Configuration>
 		<Configuration
 			Name="Debug Express|Win32"
+			IntermediateDirectory="$(ConfigurationName)"
 			ConfigurationType="1"
 			>
 			<Tool
