--- a/DScaler/Plugins/FLT_LuminChromaShift/FLT_LuminChromaShift2005.vcproj
+++ b/DScaler/Plugins/FLT_LuminChromaShift/FLT_LuminChromaShift2005.vcproj
@@ -202,6 +202,7 @@
 		</Configuration>
 		<Configuration
 			Name="Debug Express|Win32"
+			IntermediateDirectory="$(ConfigurationName)"
 			ConfigurationType="1"
 			>
 			<Tool
