--- a/DScaler/SendMsg/SendMsg2005.vcproj
+++ b/DScaler/SendMsg/SendMsg2005.vcproj
@@ -203,6 +203,7 @@
 		</Configuration>
 		<Configuration
 			Name="Debug Express|Win32"
+			IntermediateDirectory="$(ConfigurationName)"
 			ConfigurationType="1"
 			>
 			<Tool
