--- a/DScaler/Verinc/Verinc2005.vcproj
+++ b/DScaler/Verinc/Verinc2005.vcproj
@@ -191,6 +191,7 @@
 		</Configuration>
 		<Configuration
 			Name="Debug Express|Win32"
+			IntermediateDirectory="$(ConfigurationName)"
 			ConfigurationType="1"
 			>
 			<Tool
