Updated card list

--- a/DScaler/Release/CX2388xCards.ini
+++ b/DScaler/Release/CX2388xCards.ini
@@ -1,8 +1,11 @@
-; $Id: CX2388xCards.ini,v 1.11 2005-11-14 18:38:36 to_see Exp $
+; $Id: CX2388xCards.ini,v 1.12 2006-12-29 23:05:45 to_see Exp $
 ;
 ; CX2388x card list.
 ;
 ; $Log: not supported by cvs2svn $
+; Revision 1.11  2005/11/14 18:38:36  to_see
+; Added new Card: 10Moon TVBaby3
+;
 ; Revision 1.10  2005/10/30 21:26:30  to_see
 ; Added new Cards from v4l2 - not tested
 ;
@@ -112,6 +115,7 @@ Input ( "S-Video", svideo )
 
 
 [MSI TV@nywhere (NTSC)]
+;v4l card: #13
 DefaultTuner = mt2032
 
 Input ( "Tuner", tuner)
@@ -144,6 +148,7 @@ Input ( "Composite Over S-Video", composite )
 
 
 [MSI TV@nywhere (PAL)]
+;v4l card: #13
 DefaultTuner = mt2032_pal
 
 Input ( "Tuner", tuner)
@@ -190,6 +195,7 @@ Input ( "Composite Over S-Video", composite )
 ;Thanks Hans Schroeder
 ;Thanks Michal Pytasz
 ;Thanks Wesley Ward
+;v4l card: #7
 AutoDetectID = 0x86061462
 DefaultTuner = mt2050_pal
 
@@ -264,8 +270,10 @@ Input ( "Composite Over S-Video", composite )
 ;
 ;Please close your PVR and IR apps in system tray to
 ;get audio before you start DScaler.
-
+;
 ;Thanks Tom Zoerner
+;
+;v4l card: #1
 AutoDetectID = 0x34010070, 0x34000070
 DefaultTuner = auto
 
@@ -273,7 +281,7 @@ Input ( "Tuner", tuner)
 	MuxSelect = 0
 	GPIOSet ( 0x0000ff00 )
 
-;for debuging only
+;debug only
 Input ( "Tuner (Mono Audio)", tuner)
 	MuxSelect = 0
 	GPIOSet ( 0x0000ff01 )
@@ -320,6 +328,7 @@ Input ( "PDI", ccir )
 ;Thanks Daniel Wojcik
 ;Thanks Brian Bennefeld
 ;Thanks Hervé
+;v4l card: #5
 AutoDetectID = 0x6611107d
 DefaultTuner = philips_fm1216me_mk3
 
@@ -355,6 +364,7 @@ UseTDA9887 ()
 ;get audio before you start DScaler.
 
 ;Thanks Alan Erickson
+;v4l card: #5
 AutoDetectID = 0x6613107D
 DefaultTuner = philips_4in1
 
@@ -384,6 +394,7 @@ UseTDA9887 ()
 
 [ATI TV Wonder Pro]
 ;Thanks Allen Ly
+;v4l card: #4
 AutoDetectID = 0x00f81002
 DefaultTuner = philips_4in1
 
@@ -410,8 +421,9 @@ UseTDA9887 ()
 ;Comments:
 ;Card variant with onboard TDA9874 audio decoder.
 ;Only mono audio direct from tuner supported.
-
+;
 ;Thanks Denis Love
+;v4l card: #3, #11
 AutoDetectID = 0x48111554
 DefaultTuner = philips_pal
 
@@ -435,7 +447,7 @@ Input ( "S-Video", svideo )
 ;
 ;Please close your PVR and IR apps in system tray to
 ;get audio before you start DScaler.
-
+;v4l card: #3, #11
 AutoDetectID = 0x48111554
 DefaultTuner = philips_pal
 
@@ -478,6 +490,7 @@ Input ( "S-Video", svideo )
 [AverTV Studio 303 (M126)]
 ;Thanks Zbigniew Pluta
 ;Thanks deky
+;v4l card: #6
 AutoDetectID = 0x000b1461, 0x000a1461
 DefaultTuner = philips_fm1216me_mk3
 
@@ -503,8 +516,9 @@ UseTDA9887 ()
 	SetModes ( pal-dk  ) = { OutputPort1 = active, OutputPort2 = active } ; OK
 	SetModes ( ntsc-m  ) = { intercarrier }                               ; ???
 
+
 [GDI Black Gold]
-;from v4l2
+;from v4l, card #2
 AutoDetectID = 0x010614c7, 0x010614c7
 DefaultTuner = absent
 
@@ -519,7 +533,7 @@ Input ( "S-Video",    svideo )
 
 
 [IODATA GV-VCP3/PCI]
-;from v4l2
+;from v4l, card #10
 AutoDetectID = 0xd00310fc
 DefaultTuner = absent
 
@@ -534,7 +548,7 @@ Input ( "S-Video",    svideo )
 
 
 [IODATA GV/BCTV7E]
-;from v4l2
+;from v4l, card #26
 AutoDetectID = 0xd03510fc
 DefaultTuner = philips_fq1286
 
@@ -550,11 +564,17 @@ Input ( "S-Video", svideo )
 	MuxSelect = 2
 	GPIOSet ( 0x0000e07f )
 
+;TDA9887 settings not tested - just copied from Leadtek WinFast TV2000 XP Expert
 UseTDA9887 ()
+	SetModes ( pal-bg   ) = { OutputPort1 = active, OutputPort2 = active }
+	SetModes ( pal-i    ) = { OutputPort1 = active, OutputPort2 = active }
+	SetModes ( pal-dk   ) = { OutputPort1 = active, OutputPort2 = active }
+	SetModes ( ntsc-m   ) = { intercarrier, OutputPort1 = active }
+	SetModes ( secam-l  ) = { OutputPort2 = active }
 
 
 [Leadtek WinFast DV2000]
-;from v4l2
+;from v4l, card #8
 AutoDetectID = 0x6620107D
 DefaultTuner = philips_fmd1216me_mk3
 
@@ -580,7 +600,7 @@ UseTDA9887 ()
 
 
 [Leadtek WinFast PVR2000]
-;from v4l2
+;from v4l2, card #9
 AutoDetectID = 0x663B107D, 0x663C107D,
 DefaultTuner = philips_fmd1216me_mk3
 
@@ -606,7 +626,7 @@ UseTDA9887 ()
 
 
 [Asus PVR-416]
-;from v4l2 - analog part only:
+;from v4l (analog part only), card #12
 ;Blackbird PVR Card with HW MPEG Encoder
 AutoDetectID = 0x48231043
 DefaultTuner = philips_fm1236_mk3
@@ -623,9 +643,8 @@ UseTDA9887 ()
 
 
 [K-World/VStream XPert DVB-T]
-;from v4l2 - analog part only:
-;DVB Card
-;TODO: reset code on GPIO's
+;from v4l (analog part only), card #14
+;Todo: reset code on GPIO's
 AutoDetectID = 0x08a617de
 DefaultTuner = absent
 
@@ -639,9 +658,8 @@ Input ( "S-Video", svideo )
 
 
 [DViCO FusionHDTV DVB-T1]
-;from v4l2 - analog part only:
-;DVB Card
-;TODO: GPIO0:0 is hooked to mt352 reset pin
+;from v4l (analog part only), card #15
+;Todo: GPIO0:0 is hooked to mt352 reset pin
 AutoDetectID = 0xd81018ac
 DefaultTuner = absent
 
@@ -659,7 +677,7 @@ Input ( "S-Video", svideo )
 
 
 [K-World LTV883RF]
-;from v4l2
+;from v4l card #16
 ;seems to have no eeprom
 ;AutoDetectID =
 DefaultTuner = tnf_8831bgff
@@ -668,7 +686,7 @@ Input ( "Tuner", tuner)
 	MuxSelect = 0
 	GPIOSet ( 0x000007f8 )
 
-;for debuging only
+;debug only
 Input ( "Tuner (Mono Audio)", tuner)
 	MuxSelect = 0
 	GPIOSet ( 0x000007f9 )
@@ -683,14 +701,12 @@ Input ( "S-Video", svideo )
 
 
 [DViCO FusionHDTV 3 Gold-Q]
-;from v4l2 - analog part only:
-;DVB Card
+;from v4l (analog part only), card #17
 AutoDetectID = 0xd81018ac
-
-;TODO: Add new tuner
+;Todo: Add new tuner
 ;DefaultTuner = TUNER_MICROTUNE_4042FI5
 DefaultTuner = absent
-
+;
 ;TODO: Handle GPIO's:
 ;GPIO[0] resets DT3302 DTV receiver
 ;0 - reset asserted
@@ -727,7 +743,7 @@ Input ( "S-Video", svideo )
 
 
 [Provideo PV259]
-;from v4l2 - analog part only:
+;from v4l (analog part only), card #20 
 ;Blackbird PVR Card with HW MPEG Encoder
 AutoDetectID = 0x25801540
 DefaultTuner = philips_multi
@@ -737,9 +753,8 @@ Input ( "Tuner", tuner)
 
 
 [DViCO FusionHDTV DVB-T Plus]
-;from v4l2 - analog part only:
-;DVB Card
-;TODO: GPIO0:0 is hooked to mt352 reset pin
+;from v4l (analog part only), card #21 
+;Todo: GPIO0:0 is hooked to mt352 reset pin
 AutoDetectID = 0xd81018ac
 DefaultTuner = absent ; No analog tuner
 
@@ -770,6 +785,69 @@ Input ( "S-Video", svideo )
 	GPIOSet ( 0x00ffafff, 0x00007000, 0x00ffafff, 0x02000000 )
 
 
+[Real Angel 330]
+;Thanks ranieri from forum
+AutoDetectID =0xea3d14f1
+;Note: correct tuner model is "Xceive xc3028", not supported atm.
+;Todo: add new tuner device
+; ..tuner settings seems to work too.. see forum.
+DefaultTuner = hitachi_ntsc 
+
+Input ( "Tuner", tuner)
+MuxSelect = 0
+GPIOSet ( 0x000000ff, 0x0000f35d, 0x00000019, 0x00000000 )
+
+Input ( "Composite", composite )
+MuxSelect = 1
+GPIOSet ( 0x000000ff, 0x0000f37d, 0x00000019, 0x00000000 )
+
+Input ( "S-Video", svideo )
+MuxSelect = 2
+GPIOSet ( 0x000000ff, 0x0000f37d, 0x00000019, 0x00000000 )
+
+
+[pcHDTV HD3000 HDTV]
+;from v4l (analog part only), card #22 
+AutoDetectID = 0x30007063
+;Note: correct tuner model is "Thomson DTT761x", not supported atm.
+;Todo: add new tuner device, hope mk3's settings are working
+DefaultTuner = philips_fmd1216me_mk3
+
+Input ( "Composite", composite )
+	MuxSelect = 1
+	GPIOSet ( 0x00008400 )
+
+Input ( "S-Video", svideo )
+	MuxSelect = 2
+	GPIOSet ( 0x00008400 )
+
+;TDA9887 settings not tested - just copied from Leadtek WinFast TV2000 XP Expert
+UseTDA9887 ()
+	SetModes ( pal-bg   ) = { OutputPort1 = active, OutputPort2 = active }
+	SetModes ( pal-i    ) = { OutputPort1 = active, OutputPort2 = active }
+	SetModes ( pal-dk   ) = { OutputPort1 = active, OutputPort2 = active }
+	SetModes ( ntsc-m   ) = { intercarrier, OutputPort1 = active }
+	SetModes ( secam-l  ) = { OutputPort2 = active }
+
+
+[Hauppauge WinTV 28xxx (Roslyn) models]
+;from v4l, card #24 
+AutoDetectID = 0x28010070
+DefaultTuner = setup
+
+Input ( "Tuner", tuner)
+	MuxSelect = 0
+	GPIOSet ( 0x0000ed1a, 0x00000000, 0x000000ff )
+
+Input ( "Composite", composite )
+	MuxSelect = 1
+	GPIOSet ( 0x0000ff02, 0x00000000, 0x000000ff )
+
+Input ( "S-Video", svideo )
+	MuxSelect = 2
+	GPIOSet ( 0x0000ed92, 0x00000000, 0x000000ff )
+
+;
 
 ; ***** Tuner list: (as at July 2005) *****
 ; auto                        -2
@@ -823,16 +901,16 @@ Input ( "S-Video", svideo )
 ; mt2050_pal                  46
 ; philips_4in1                47
 ; tcl_2002n                   48
-; hitachi_ntsc				  49
-; philips_pal_mk			  50
-; philips_fm1236_mk3		  51
-; lg_ntsc_tape				  52
-; tnf_8831bgff				  53
-; philips_fm1256_ih3		  54
-; philips_fq1286			  55
-; lg_pal_tape				  56
-; philips_fq1216ame_mk4		  57
-; philips_fq1236a_mk4		  58
+; hitachi_ntsc                49
+; philips_pal_mk              50
+; philips_fm1236_mk3          51
+; lg_ntsc_tape                52
+; tnf_8831bgff                53
+; philips_fm1256_ih3          54
+; philips_fq1286              55
+; lg_pal_tape                 56
+; philips_fq1216ame_mk4       57
+; philips_fq1236a_mk4         58
 ; philips_tda8275             59
 ; ymec_tvf_8531mf             60
 ; ymec_tvf_5533mf             61
